# XyOS

./: .gitignore  CMakeLists.txt  Makefile  README.md
kernel/: init.c  init.h
kernel/boot/: boot.S  hardware.h  multiboot.h  start.c
kernel/driver/: console.c  console.h  driver.c  driver.h  ide.c  ide.h  keyboard.c  keyboard.h  timer.c  timer.h
kernel/file_system/: file.c  file.h  fs.c  fs.h
kernel/init/: segment.c  segment.h
kernel/interrupt/: idt.c  idt.h  interrupt.c  interrupt.h  intr_entry.S  intr_vec.S  pic.c  pic.h  trap.c  trap.h
kernel/lib/: asm_wrapper.c  asm_wrapper.h  bit.h  bitmap.c  bitmap.h  def.h  list.h  map.c  map.h  queue.c  queue.h
kernel/memory/: direct_mapping_allocator.c  direct_mapping_allocator.h  memory_manager.c  memory_manager.h  page_allocator.c  page_allocator.h  paging.c  paging.h  segment.c  segment.h
kernel/process/: process.c  process.h
kernel/scripts/: intr_vec.sh  kernel.ld
kernel/syscall/: syscall.c  syscall.h
kernel/thread/: switch_reg.S  thread.c  thread.h
